--- a/backend/public/html/mystyle.css
+++ b/backend/public/html/mystyle.css
@@ -61,7 +61,7 @@ a.underline:hover {
 }
 
 .introduction {
-    height:100vh;
+    height: 100vh;
     width: 100%;
 //    background: url('background.jpg') no-repeat center center;
     -webkit-background-size: cover;
@@ -83,7 +83,8 @@ a.underline:hover {
     box-shadow: 10px 10px 15px silver;
 }
 
-.first-letter {
-  font-size: 35px;
-  line-height: 70px;
+.case th {
+    border-style:solid;
+    padding: 1px !important;
+    height: 110px;
 }
