start adjusting layout and reworking content for lawyer to inspect

--- a/backend/public/html/mystyle.css
+++ b/backend/public/html/mystyle.css
@@ -31,6 +31,14 @@ html {
   margin: 0px;
 }
 
+h5 {
+  color: #afc6e9;
+  font-family: serif;
+  # font-weight: bold;
+  # margin-top: 0px;
+  # margin-bottom: 1px;
+}
+
 a.underline, a.underline:focus {
   text-decoration: underline;
 }
