Share results link, better looking on small screens

--- a/backend/public/html/mystyle.css
+++ b/backend/public/html/mystyle.css
@@ -120,3 +120,8 @@ a.underline:hover {
     padding: 1px !important;
     height: 110px;
 }
+
+.navbar-nav {
+    min-height: 55px;
+    line-height: 55px;
+}
