--- a/backend/app/views/index_private.scala.html
+++ b/backend/app/views/index_private.scala.html
@@ -9,9 +9,6 @@
         <link rel="stylesheet" href="/assets/html/third-party/open-iconic-master/font/css/open-iconic-bootstrap.css">
         <link rel="stylesheet" href="/assets/html/mystyle.css">
 
-        <meta name="description" content="Open-source homeopathic repertory that requires only a web browser to run." />
-		<meta name="keywords" content="oorep, repertory, homeopathy, repertorization" />
-
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta property="og:image" content="https://www.oorep.com/assets/html/img/oorep_screenshot_shared.jpg" />
@@ -24,11 +21,14 @@
         } else {
         <meta property="og:title" content="OOREP - rubrics for '@symptom' in repertory '@repertory'" />
         }
+
+        <meta name="description" content="Open-source homeopathic repertory that requires only a web browser to run." />
+        <meta name="keywords" content="oorep, repertory, homeopathy, repertorization" />
 }
 
 @main(title, header) {
     <!-- Load JavaScript application first (e.g., in case of /show?), then execute below script. -->
-    <script type="text/javascript" charset="ISO-8859-1" src="/assets/frontend-opt.js"></script>
+    <script type="text/javascript" charset="ISO-8859-1" src="/assets/sec_frontend-opt.js"></script>
 
     <!-- Now that application has loaded, display the results of below lookup... -->
     <script>
