--- a/backend/public/html/mystyle.css
+++ b/backend/public/html/mystyle.css
@@ -113,6 +113,7 @@ a.underline:hover {
 
 .image {
     box-shadow: 10px 10px 15px silver;
+    margin-bottom: 20px;
 }
 
 .case th {
@@ -124,4 +125,36 @@ a.underline:hover {
 .navbar-nav {
     min-height: 55px;
     line-height: 55px;
+}
+
+.cookiealert {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100vw;
+    margin: 0 !important;
+    z-index: 999;
+    opacity: 0;
+    visibility: hidden;
+    border-radius: 0;
+    transform: translateY(100%);
+    transition: all 500ms ease-out;
+    color: #ecf0f1;
+    background: #212327;
+}
+
+.cookiealert.show {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0%);
+    transition-delay: 1000ms;
+}
+
+.cookiealert a {
+    text-decoration: underline
+}
+
+.cookiealert .acceptcookies {
+    margin-left: 10px;
+    vertical-align: baseline;
 }
