--- a/backend/app/views/main.scala.html
+++ b/backend/app/views/main.scala.html
@@ -7,7 +7,7 @@
 @(title: String, header: Html)(content: Html)
 
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
     <head>
         @* Here's where we render the page title `String`. *@
         <title>@title</title>
