--- a/backend/app/views/partial/contact.scala.html
+++ b/backend/app/views/partial/contact.scala.html
@@ -31,7 +31,7 @@
 
     <p style="text-align:justify;">
       Homepage: <a href="http://baueran.multics.org/">Andreas Bauer</a><br>
-      E-Mail: baueran&#64;gmail.com
+      E-Mail: info&#64;oorep.com
     </p>
 
     <p style="text-align:justify;">
