--- a/backend/app/views/partial/impressum.scala.html
+++ b/backend/app/views/partial/impressum.scala.html
@@ -23,7 +23,7 @@
 
         <p style="text-align:justify;">
             Homepage: <a href="http://baueran.multics.org/">Andreas Bauer</a><br>
-            E-Mail: baueran&#64;gmail.com
+            E-Mail: info&#64;oorep.com
         </p>
 
         <p style="text-align:justify;">
@@ -203,6 +203,9 @@
                 von <i>kent</i>). Veröffentlicht von <b>Vladimir Polony</b>,
                 Stupy 24, Banska Bystrica, Slowakei unter der GPL v3
                 Lizenz (2008).</li>
+
+            <li>robasif: <b>H. A. Roberts:</b> <i>Sensations as if - Repertory of Subjective Symptoms</i>,
+                Formur Intl. (1937).</li>
 
             <li>tylercold: <b>M. L. Tyler:</b> <i>Miniature repertory of the common cold</i>
                 aus <i>Pointers to the Common Remedies</i>, British Homeopathic Association (1934).</li>
