--- a/backend/app/views/partial/faq.scala.html
+++ b/backend/app/views/partial/faq.scala.html
@@ -107,7 +107,7 @@
     <h5 class="freetext">&bull; What repertories do you use?</h5>
 
     <p style="text-align:justify;">
-		At the moment, there are 11 different repertories installed
+		At the moment, there are 12 different repertories installed
 		on this server.  We do <b>not</b> consider them all to be part of
 		OOREP itself though.  Until further notice, the OOREP source
 		code is only accompanied by the <i>kent-de</i> and <i>publicum</i>
@@ -121,11 +121,6 @@
     </p>
 
     <ul>
-
-		<!--	<li>atama: repertory of the AtamA software (derived from-->
-		<!--	  <i>kent</i>). Copyright <b>Anahata Software</b>. Used with-->
-		<!--	  friendly permission from Paul Dupuy, Jr. from Feb. 9.,-->
-		<!--	  2019.</li>-->
 
 		<li>boen [under development]: <b>T. F. Allen:</b> <i>Boenninghausen's
 			Therapeutic Pocket Book</i>, The Hahnemann Publishing House, Philadelphia (1891).</li>
@@ -161,6 +156,9 @@
 			from <i>kent</i>). Published by <b>Vladimir Polony</b>,
 			Stupy 24, Banska Bystrica, Slovakia under the terms of the
 			GPL v3 license (2008).</li>
+
+		<li>robasif: <b>H. A. Roberts:</b> <i>Sensations as if - Repertory of Subjective Symptoms</i>,
+			Formur Intl. (1937).</li>
 
 		<li>tylercold: <b>M. L. Tyler:</b> <i>Miniature repertory of the common cold</i>
 			taken from <i>Pointers to the Common Remedies</i>,
