--- a/backend/app/views/partial/contact.scala.html
+++ b/backend/app/views/partial/contact.scala.html
@@ -1,7 +1,7 @@
 <div class="container" style="padding-top:200px; padding-bottom:200px">
 
   <div class="col">
-      <img src="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/logo_small.png" alt="OOREP">
+      <img src="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/logo_small.png" width="180" height="65" alt="OOREP">
   </div>
 
   <div class="col">
