--- a/backend/app/views/partial/faq.scala.html
+++ b/backend/app/views/partial/faq.scala.html
@@ -1,7 +1,7 @@
 <div class="container" style="padding-top:200px; padding-bottom:200px">
 
   <div class="col">
-	  <img src="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/logo_small.png" alt="OOREP">
+	  <img src="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/logo_small.png" width="180" height="65" alt="OOREP">
   </div>
 
   <div class="col">
@@ -79,7 +79,7 @@
 		interest in and basic understanding of homeopathic
 		repertorisation.  As such it doesn't offer the same advanced
 		features that the commercial homeopathy programs do.  Automated
-		repertorisation, however, which is <emph>the</emph> key feature
+		repertorisation, however, which is <em>the</em> key feature
 		of any such homeopathy program, is offered, even including
 		multiple different repertories.
     </p>
