--- a/backend/app/views/partial/impressum.scala.html
+++ b/backend/app/views/partial/impressum.scala.html
@@ -1,7 +1,7 @@
 <div class="container" style="padding-top:200px; padding-bottom:200px">
 
     <div class="col">
-        <img src="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/logo_small.png" alt="OOREP">
+        <img src="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/logo_small.png" width="180" height="65" alt="OOREP">
     </div>
 
     <div class="col">
@@ -109,9 +109,10 @@
 
         <ul>
             <li>Hahnemann Büste: Extrahiert aus einem <a href="https://commons.wikimedia.org/wiki/File:David_d%27Angers_-_Samuel_Hahnemann_bust.jpg">Bild</a> der Büste von David d'Angers (1788-1856)</li>
-            <li>Wassertropfen: <a href="https://pixabay.com/photos/drops-of-water-water-liquid-fresh-578897/">Pixabay</a></li>
-            <li>Englische Fahne: <a href="https://www.iconfinder.com/icons/16014/england_english_flag_great_britain_inghilterra_italia_uk_united_kingdom_icon">Iconfinder</a></li>
+            <li>Wassertropfen: <a href="https://pixabay.com/de/photos/wasser-blasen-sekt-wasser-blasen-424807/">Pixabay</a></li>
             <li>Apotheke: <a href="https://pixabay.com/photos/pharmacy-antique-old-chemicals-3377670/">Pixabay</a></li>
+            <li>Englische Fahne: <a href="https://www.iconfinder.com/icons/16014/england_english_flag_great_britain_inghilterra_italia_uk_united_kingdom_icon">Iconfinder</a></li>
+            <li>Laptop: <a href="https://webstockreview.net/image/clipart-computer-designer/1512299.html">WebStockReview</a></li>
         </ul>
 
         <p style="text-align:justify;">
@@ -129,16 +130,20 @@
         </p>
 
         <ul>
+            <li><a href="https://github.com/michalsnik/aos">AOS</a>
+                (v2.3.4, Copyright Michal Sajnog, MIT-License)</li>
             <li><a href="https://getbootstrap.com/">bootstrap</a>
-                (v4.1.3, Copyright 2011-2018 The Bootstrap Authors, MIT-License)</li>
+                (v4.2.1, Copyright 2011-2018 The Bootstrap Authors, MIT-License)</li>
+            <li><a href="https://bootswatch.com/">bootswatch</a>
+                (v4.2.1, Copyright 2014-2021 Thomas Park, MIT-License)</li>
             <li><a href="https://jquery.com/">jquery</a>
                 (v3.3.1, Copyright JS Foundation and other contributors, MIT-License)</li>
             <li><a href="https://popper.js.org/">popper</a>
                 (v1.15.0, Copyright 2018 Federico Zivolo, MIT-License)</li>
-            <li><a href="https://github.com/jpillora/notifyjs">notify.js</a>
-                (v0.4.2, Copyright Jaime Pillora, MIT-License)</li>
             <li><a href="https://useiconic.com/open">Open Iconic</a> font
                 (v1.1.1, MIT- and Open-Font-Licenses)</li>
+            <li><a href="https://fonts.google.com/specimen/Open+Sans">Open Sans</a> font
+                (Copyright Steve Matteson, Apache-License)</li>
             <li><a href="https://en.wikipedia.org/wiki/Linux_Libertine">Linux Libertine Display</a> font
                 (Copyright Philipp H. Poll, MIT- or GPL-License)</li>
         </ul>
