--- a/backend/app/views/partial/noscript_warning.scala.html
+++ b/backend/app/views/partial/noscript_warning.scala.html
@@ -1,5 +1,5 @@
 <noscript>
-    <div class="alert alert-danger text-center" style="padding:20px;" role="alert">
+    <div class="alert alert-danger text-center" style="padding:20px; margin-top:60px;" role="alert">
         <b>OOREP requires JavaScript. Turn it on in your browser and reload the page, please.</b>
     </div>
 </noscript>
