--- a/backend/app/views/index_changepassword.scala.html
+++ b/backend/app/views/index_changepassword.scala.html
@@ -1,36 +1,23 @@
-@(memberId: Int, pcrId: String, title: String)
+@(request: Request[AnyContent], memberId: Int, pcrId: String, title: String)
+
+@import org.multics.baueran.frep.backend.controllers._
+@import org.multics.baueran.frep.shared.Defs._
 
 @header = {
-        <link rel="stylesheet" href="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/third-party/bootstrap-4.1.3/css/bootstrap.min.css">
-        <script src="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/third-party/jquery-3.3.1.min.js"></script>
-        <script src="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/third-party/popper.min.js"></script>
-        <script src="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/third-party/bootstrap-4.1.3/js/bootstrap.min.js"></script>
-        <script src="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/js/oorep_local.js"></script>
-        <link rel="stylesheet" href="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/third-party/open-iconic-master/font/css/open-iconic-bootstrap.css">
-        <link rel="stylesheet" href="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/mystyle.css">
-
-        <meta name="description" content="Free online repertory of homeopathy that requires only a web browser to run. Features many of the classical repertories, such as Kent, Boger, Hering, etc." />
-	    <meta name="keywords" content="oorep, online, repertory, homeopathy, repertorization, kent" />
-
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta property="og:image" content="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/oorep_screenshot_shared.jpg" />
-        <meta property="og:image:secure_url" content="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/oorep_screenshot_shared.jpg" />
-        <meta property="og:description" content="Free online repertory of homeopathy that requires only a web browser to run. Features many of the classical repertories, such as Kent, Boger, Hering, etc." />
-        <meta property="og:type" content="website" />
-
-        <meta property="og:title" content="OOREP - open online homeopathic repertory" />
+  @{ partial.header(title,
+                    getFromRequestCookie(request, CookieFields.theme.toString).getOrElse("normal")) }
 }
 
 @main(title, header) {
+
     @partial.noscript_warning()
 
     <div id="temporary_content">
 
-        <div style="width:100%;" id="content">
+        <div style="width:100%;">
             <div style="width:100%; margin-top:100px; margin-bottom:100px;" class="text-center">
                 <h1 style="font-size:20pt;">
-                    <a href="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}/"><img src="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/logo_small.png" alt="OOREP"></a>
+                    <a href="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}/"><img src="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/logo_small.png" width="180" height="65" alt="OOREP"></a>
                     &nbsp; &middot; &nbsp; open online homeopathic repertory
                 </h1>
             </div>
@@ -41,11 +28,9 @@
 
         </div>
 
-        <div style="width:100%;">
-            @partial.disclaimer_noscript()
-        </div>
-
     </div>
+
+    <div style="width:100%;" id="content"></div>
 
     <!-- Load JavaScript application first (e.g., in case of /show?), then execute below script. -->
     <script src="/assets/frontend-opt.js"></script>
@@ -56,4 +41,7 @@
       ChangePasswordForm.show("@memberId", "@pcrId");
     });
     </script>
+
+    @partial.disclaimer()
+
 }
