--- a/backend/app/views/index_landing.scala.html
+++ b/backend/app/views/index_landing.scala.html
@@ -1,60 +1,59 @@
+@(request: Request[AnyContent])
+
+@import org.multics.baueran.frep.backend.controllers._
+@import org.multics.baueran.frep.shared.Defs._
+
 <!doctype html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
 
   <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta property="og:image" content="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/oorep_screenshot.jpg" />
-    <meta property="og:image:secure_url" content="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/oorep_screenshot.jpg" />
-    <meta property="og:description" content="Free online repertory of homeopathy that requires only a web browser to run. Features many of the classical repertories, such as Kent, Boger, Hering, etc." />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="OOREP - open online homeopathic repertory" />
-
-    <meta name="description" content="Free online repertory of homeopathy that requires only a web browser to run. Features many of the classical repertories, such as Kent, Boger, Hering, etc." />
-    <meta name="keywords" content="oorep, online, repertory, homeopathy, repertorization, kent" />
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/third-party/bootstrap-4.1.3/css/bootstrap.min.css">
-    <script src="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/third-party/jquery-3.3.1.min.js"></script>
-    <script src="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/third-party/popper.min.js"></script>
-    <script src="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/third-party/bootstrap-4.1.3/js/bootstrap.min.js"></script>
-    <script src="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/third-party/notify.min.js"></script>
-    <link  rel="stylesheet" href="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/third-party/open-iconic-master/font/css/open-iconic-bootstrap.css">
-    <script src="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/js/oorep_local.js"></script>
-    <link rel="stylesheet" href="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/mystyle.css">
-
-    <title>OOREP &mdash; open online homeopathic repertory</title>
+    @partial.header("OOREP - open online homeopathic repertory",
+                    getFromRequestCookie(request, CookieFields.theme.toString).getOrElse("normal"))
   </head>
 
   <body>
+    <script>AOS.init();</script>
+
+    @if(org.multics.baueran.frep.backend.controllers.getAuthenticatedUser(request) == None) {
+      @partial.cookiepopup(org.multics.baueran.frep.backend.controllers.Get.staticServerUrl)
+    }
+
+    @partial.navbar(org.multics.baueran.frep.backend.controllers.Get.staticServerUrl, request)
 
     @partial.noscript_warning()
 
     <div id="temporary_content">
 
-      <div style="width:100%;" id="content">
+      <div style="width:100%;">
         <div style="width:100%; margin-top:100px; margin-bottom:100px;" class="text-center">
           <h1 style="font-size:20pt;">
-            <a href="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}/"><img src="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/logo_small.png" alt="OOREP"></a>
+            <a href="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}/"><img src="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/logo_small.png" width="180" height="65" alt="OOREP"></a>
             &nbsp; &middot; &nbsp; open online homeopathic repertory
           </h1>
         </div>
 
-        @partial.about()
-
-        @partial.features()
-
-      </div>
-
-      <div style="width:100%;">
-        @partial.disclaimer_noscript()
       </div>
 
     </div>
 
-    <script src="/assets/frontend-opt.js"></script>
+    <div style="width:100%;" id="content"></div>
+
+    @if(org.multics.baueran.frep.backend.controllers.getAuthenticatedUser(request) == None) {
+
+      <script src="/assets/frontend-opt.js"></script>
+
+      @partial.about()
+
+      @partial.features()
+
+    } else {
+
+      <script src="/assets/sec_frontend-opt.js"></script>
+
+    }
+
+    @partial.disclaimer()
 
   </body>
 </html>
