--- a/backend/app/views/partial/cookies.scala.html
+++ b/backend/app/views/partial/cookies.scala.html
@@ -1,10 +1,7 @@
-@(javascript: String)
-<!-- Two possible values allowed: enabled or disabled, see bottom of file! -->
-
 <div class="container" style="padding-top:200px; padding-bottom:200px">
   
   <div class="col">
-    <img src="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/logo_small.png" alt="OOREP">
+    <img src="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/logo_small.png" width="180" height="65" alt="OOREP">
   </div>
   
   <div class="col">
@@ -211,19 +208,11 @@
   </div>
 
   <div class="col text-center">
-    @if(javascript == "enabled") {
-    <a href="#" onclick="oorepLoadIntoContentDiv('@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}/partial/datenschutz');">
+    <a href="/datenschutz">
       <img src="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/germanflag.png" alt="Deutsche Version dieses Dokuments">
       <br>
       Selbe Information auf deutsch
     </a>
-    } else {
-    <a href="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}/noscript/datenschutz">
-      <img src="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/germanflag.png" alt="Deutsche Version dieses Dokuments">
-      <br>
-      Selbe Information auf deutsch
-    </a>
-    }
   </div>
 
 </div>
