--- a/backend/app/views/partial/features.scala.html
+++ b/backend/app/views/partial/features.scala.html
@@ -1,24 +1,58 @@
-        <div class="jumbotron jumbo-light horizontal-center" id="features" style="position: relative;">
-          <div class="container">
-            <div class="row h-100">
-              <div class="col-md-auto">
-                <img style="max-width:100%; height:350px;" class="image img-fluid" src="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/drops-of-water-578897_960_720.jpg" alt="">
-              </div>
-              <div class="col my-auto">
-                <h3 style="text-align:left;margin-bottom: 10px">
-                  <span>Features</span>
-                </h3>
-                <div style="text-align:left;max-width:700px;">
-                  <ul>
-                    <li>Free and open: you can use this server for free or download the source code and run your own</li>
-                    <li>Platform-independent: all you need is a web-browser</li>
-                    <li>Access to common and well-known homeopathic repertories</li>
-                    <li>Very easy to use: only the essential features - no distractions</li>
-                    <li>Search using wildcards, e.g., 'cough*, dry*'</li>
-                    <li>Combine different repertories in a single case</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
+
+ <div class="jumbotron jumbo-dark horizontal-center background-image" id="features" style="position: relative;">
+    <div class="container">
+      <h3 style="text-align:center;margin-bottom: 10px">
+        <span class="white-dot"></span>
+        <span class="white-dot"></span>
+        <span class="white-dot"></span>
+        <span>Why use OOREP?</span>
+        <span class="white-dot"></span>
+        <span class="white-dot"></span>
+        <span class="white-dot"></span>
+      </h3>
+      <div class="row">
+        <div class="col-lg-4 col-sm-6">
+          <div class="icon" data-aos-delay="400" data-aos="fade" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="600" data-aos-once="true">
+            <img style="height:65px; width:55px;" src="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/icon-penguin.png" alt="penguin">
           </div>
+          <h4>Powered by open-source</h4>
+          <p>Built using proven open-source technologies and products. You can also download all the source code and run your own version of the software.</p>
         </div>
+        <div class="col-lg-4 col-sm-6">
+          <div class="icon" data-aos-delay="400" data-aos="fade" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="600" data-aos-once="true">
+            <img style="height:55px; width:55px;" src="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/icon-browser.png" alt="browser">
+          </div>
+          <h4>Platform-independent</h4>
+          <p>Works with any computer and OS. All you need is a web-browser - no installations, serial numbers or dongles.</p>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <div class="icon" data-aos-delay="400" data-aos="fade" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="600" data-aos-once="true">
+            <img style="height:40px; width:50px;" src="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/icon-book.png" alt="book">
+          </div>
+          <h4>Various repertories</h4>
+          <p>Repertorise using many of the well-known repertories like Kent, Boger, Hering, etc.</p>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <div class="icon" data-aos-delay="400" data-aos="fade" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="600" data-aos-once="true">
+            <img style="height:40px; width:40px;" src="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/icon-results.png" alt="results">
+          </div>
+          <h4>Get results fast</h4>
+          <p>Very easy to use: only the essential features - no distractions, no non-sense.</p>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <div class="icon" data-aos-delay="400" data-aos="fade" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="600" data-aos-once="true">
+            <img style="height:60px; width:60px;" src="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/icon-search.png" alt="search">
+          </div>
+          <h4>Advanced search</h4>
+          <p>Widen your search using wildcards, like <b>'cough*, dry*'</b>, or narrow it down using <b>'-'</b> (minus).</p>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <div class="icon" data-aos-delay="400" data-aos="fade" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="600" data-aos-once="true">
+            <img style="height:55px; width:28px;" src="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/icon-mobile.png" alt="mobile">
+          </div>
+          <h4>Mobile friendly</h4>
+          <p>Although repertorisation requires screen real estate, OOREP's responsive design supports mobile devices.</p>
+        </div>
+      </div>
+    </div>
+  </div>
