--- a/backend/app/views/partial/faq.scala.html
+++ b/backend/app/views/partial/faq.scala.html
@@ -107,7 +107,7 @@
     <h5 class="freetext">&bull; What repertories do you use?</h5>
 
     <p style="text-align:justify;">
-		At the moment, there are 12 different repertories installed
+		At the moment, there are 13 different repertories installed
 		on this server.  We do <b>not</b> consider them all to be part of
 		OOREP itself though.  Until further notice, the OOREP source
 		code is only accompanied by the <i>kent-de</i> and <i>publicum</i>
@@ -138,6 +138,11 @@
 
 		<li>bogsk-de: German translation of <i>bogsk</i> by <a href="https://naturheilpraxis-maier.de/">Naturheilpraxis Maier</a> (2020).
 			Used with friendly permission from <b>Andreas Maier</b>.</li>
+
+		<li>cowpert-de: German translation of the clinical index contained in <b>A. C. Cowperthwaite</b>'s <i>Text-Book of Materia Medica and Therapeutics</i> (John B. Delbridge & Son, 1905)
+			by <a href="https://naturheilpraxis-maier.de/">Naturheilpraxis Maier</a> (2021).
+			Used with friendly permission from <b>Andreas Maier</b>.
+		</li>
 
 		<li>hering: <b>C. B. Kneer:</b> <i>Repertory of Hering's Guiding Symptoms of our
 			Materia Medica</i>, F. A. Davis Co. for the Estate of Constantine Hering, Philadelphia (1896).</li>
