--- a/backend/app/views/partial/impressum.scala.html
+++ b/backend/app/views/partial/impressum.scala.html
@@ -189,7 +189,13 @@
                 2nd ed., Parkersburg, W. Va. (1916).</li>
 
             <li>bogsk-de: Übersetzung von <i>bogsk</i> durch <a href="https://naturheilpraxis-maier.de/">Naturheilpraxis Maier</a> (2020).
-                Verwendet mit freundlicher Genehmigung von <b>Andreas Maier</b>.</li>
+                Verwendet mit freundlicher Genehmigung von <b>Andreas Maier</b>.
+            </li>
+
+            <li>cowpert-de: Übersetzung des klinischen Indexes von <b>A. C. Cowperthwaite</b>s <i>Text-Book of Materia Medica and Therapeutics</i> (John B. Delbridge & Son, 1905)
+                durch <a href="https://naturheilpraxis-maier.de/">Naturheilpraxis Maier</a> (2021).
+                Verwendet mit freundlicher Genehmigung von <b>Andreas Maier</b>.
+            </li>
 
             <li>hering: <b>C. B. Kneer:</b> <i>Repertory of Hering's Guiding Symptoms of our
                 Materia Medica</i>, F. A. Davis Co. für den Nachlass von Constantine Hering, Philadelphia (1896).</li>
